# OpenJK

./: CMakeLists.txt
codemp/: CMakeLists.txt
codemp/qcommon/: qfiles.h
codemp/rd-common/: tr_font.cpp  tr_image_png.cpp
codemp/rd-prorender/: CMakeLists.txt  tr_arb.cpp  tr_init.cpp  tr_local.h  tr_shade.cpp  tr_shader.cpp
codemp/rd-vanilla/: tr_arb.cpp  tr_cmds.cpp  tr_image.cpp  tr_init.cpp  tr_local.h  tr_shader.cpp
codemp/ui/: ui_local.h  ui_main.c  ui_ultralight.cpp  ui_xcvar.h
